--- a/Dockerfile-frps
+++ b/Dockerfile-frps
@@ -1,10 +1,9 @@
-FROM fatedier/frps:v0.44.0
+FROM fatedier/frps:v0.51.3
 
-RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.ustc.edu.cn/g' /etc/apk/repositories
-RUN apk add tzdata \
-&& cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
-&& echo "Asia/Shanghai" > /etc/timezone \
-&& apk del tzdata
+RUN apk add --no-cache tzdata \
+    && cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
+    && echo "Asia/Shanghai" > /etc/timezone \
+    && apk del tzdata
 
 WORKDIR /home/frp
 COPY ./startup-frps.sh /home/frp/startup-frps.sh
